--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/vankop/graphql-test#readme",
   "dependencies": {
-    "express": "^4.15.4",
-    "express-graphql": "^0.6.11",
-    "graphql": "^0.11.3"
+    "express": "=4.15.4",
+    "express-graphql": "=0.6.11",
+    "graphql": "=0.11.3",
+    "graphql-tools": "=1.2.2"
   }
 }
